:tada: notebook 수정

--- a/src/sem_example.ipynb
+++ b/src/sem_example.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -215,23 +215,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid character in identifier (<ipython-input-20-e64e9b826084>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-e64e9b826084>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    opt.optimize(objective=’ULS’)\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character in identifier\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "opt = Optimizer(model)\n",
-    "opt.optimize(objective=’ULS’)\n",
-    "# opt.optimize(objective=’GLS’)\n",
-    "# opt.optimize(objective=’MLW’)\n",
+    "opt.optimize(objective='ULS')\n",
+    "# opt.optimize(objective='GLS')\n",
+    "# opt.optimize(objective='MLW')\n",
     "objective_function_value = opt.optimize()"
    ]
   },
@@ -250,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -258,19 +249,19 @@
      "output_type": "stream",
      "text": [
       "    lval  op  rval     Value        SE    Z-score       P-value\n",
-      "5   eta1  =~    y1  1.053723  0.178408   5.906245  3.499934e-09\n",
-      "6   eta1  =~    y2  1.061780  0.201310   5.274339  1.332354e-07\n",
-      "0   eta1   ~    x1  1.322940  0.409570   3.230070  1.237597e-03\n",
-      "2     x1   ~    x2  0.370264  0.047764   7.752019  9.103829e-15\n",
-      "1     x1   ~    x3  0.080493  0.051690   1.557221  1.194181e-01\n",
-      "3     x3   ~  eta1 -0.031662  0.042236  -0.749652  4.534645e-01\n",
-      "4     x3   ~    x2  0.808919  0.061476  13.158279  0.000000e+00\n",
-      "7   eta1  ~~  eta1  4.585495  1.382573   3.316639  9.110734e-04\n",
-      "8     x1  ~~    x1  0.103131  0.016847   6.121587  9.264800e-10\n",
-      "9     x3  ~~    x3  0.538181  0.088034   6.113327  9.757533e-10\n",
-      "10    y1  ~~    y1  0.699731  0.772319   0.906013  3.649291e-01\n",
-      "11    y2  ~~    y2  9.191566  1.707133   5.384212  7.276274e-08\n",
-      "12    y3  ~~    y3  5.138438  1.093562   4.698807  2.616853e-06\n"
+      "5   eta1  =~    y1  0.992345  0.187422   5.294716  1.192012e-07\n",
+      "6   eta1  =~    y3  0.941787  0.178550   5.274642  1.330154e-07\n",
+      "0   eta1   ~    x1  1.404708  0.450922   3.115191  1.838261e-03\n",
+      "2     x1   ~    x2  0.370265  0.047763   7.752045  9.103829e-15\n",
+      "1     x1   ~    x3  0.080493  0.051690   1.557224  1.194173e-01\n",
+      "3     x3   ~  eta1 -0.029819  0.039867  -0.747971  4.544778e-01\n",
+      "4     x3   ~    x2  0.808920  0.061476  13.158291  0.000000e+00\n",
+      "7   eta1  ~~  eta1  5.170257  1.801929   2.869289  4.113951e-03\n",
+      "8     x1  ~~    x1  0.103131  0.016847   6.121587  9.264798e-10\n",
+      "9     x3  ~~    x3  0.538186  0.088035   6.113326  9.757546e-10\n",
+      "10    y1  ~~    y1  0.699940  0.772262   0.906351  3.647501e-01\n",
+      "11    y2  ~~    y2  9.191310  1.707118   5.384109  7.280448e-08\n",
+      "12    y3  ~~    y3  5.137993  1.093504   4.698650  2.618869e-06\n"
      ]
     }
    ],
@@ -289,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,6 +293,13 @@
    "source": [
     "![Sempath plot](graph.jpg)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
